--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -26,18 +26,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Manual Trivy Setup
-      uses: aquasecurity/setup-trivy@v0.2.0
-      with:
-        cache: true
-        version: v0.65.0
-
     - name: Run Trivy vulnerability scanner in repo mode
       uses: aquasecurity/trivy-action@master
       with:
-        scan-type: 'fs'
+        scan-type: 'fs --scanners config'
         ignore-unfixed: true
         format: 'sarif'
         output: 'trivy-results.sarif'
-        severity: 'CRITICAL'
+        severity: 'CRITICAL, MEDIUM, HIGH, LOW'
         skip-setup-trivy: true
