--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -26,11 +26,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Run Trivy vulnerability scanner in repo mode
-      uses: aquasecurity/trivy-action@master
+    - name: Run Trivy vulnerability scanner in fs mode
+      uses: aquasecurity/trivy-action@0.28.0
       with:
-        scan-type: 'fs --scanners config'
-        ignore-unfixed: true
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        skip-setup-trivy: true
+        scan-type: 'fs'
+        scan-ref: '.'
+        trivy-config: trivy.yaml
