--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -27,13 +27,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Trivy vulnerability scanner in fs mode
-      uses: aquasecurity/trivy-action@0.28.0
+      uses: aquasecurity/trivy-action@master
       with:
-        scan-type: 'fs'
+        scan-type: 'fs --scanners config'
         scan-ref: '.'
-        trivy-config: trivy.yaml
-
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-results.sarif'
