--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,5 +29,8 @@ jobs:
     - name: Run Trivy vulnerability scanner in fs mode
       uses: aquasecurity/trivy-action@master
       with:
-        scan-type: 'fs --scanners config'
-        scan-ref: '.'
+          scan-type: 'config'
+          hide-progress: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          exit-code: '1'
