--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -34,7 +34,7 @@ jobs:
       uses: aquasecurity/trivy-action@0.30.0
       with: 
           scan-type: 'fs' 
-          scan-ref: 'terraform/'  # Path to your Terraform files  
+          scan-ref: 'terraform-on-azure-cloud/'  # Path to your Terraform files  
           format: 'sarif'
           scanners: 'vuln,secret,misconfig'
           severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN' 
