--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -25,12 +25,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Trivy vulnerability scanner in IaC mode
-      uses: aquasecurity/trivy-action@v0.33.1
+      uses: aquasecurity/trivy-action@0.33.1
       with:
           scan-type: 'config'
 
     - name: Scan Terraform for all type 
-      uses: aquasecurity/trivy-action@master
+      uses: aquasecurity/trivy-action@0.33.1
       with: 
           scan-type: 'fs' 
           scan-ref: '.'  # Path to your Terraform files  
