--- a/.github/workflows/Renovate Terraform.yml
+++ b/.github/workflows/Renovate Terraform.yml
@@ -19,6 +19,6 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: Run Renovate
-        uses: renovatebot/github-action@v40.1.10
+        uses: uses: renovatebot/github-action@v40.1.10
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
